# sem2laba2

./: CMakeLists.txt  Prog2main.cpp  hypocycloid.cpp  hypocycloid.h  testing.cpp
